--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "zip": "git archive HEAD -o inft2508.zip"
   },
   "dependencies": {
     "react": "18.2.0",
