--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "zip": "git archive HEAD -o inft2508.zip"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-vector-icons": "^10.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "react": "18.2.0",
+    "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
